--- a/css/styles.css
+++ b/css/styles.css
@@ -123,7 +123,7 @@ li {
     font-weight: bold;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-device-width: 768px) {
     .app-container {
         grid-template-columns: 1fr;
     }
