--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,12 @@
 :root {
     --errorColor: #E53D00;
-    --highlightColor: #FFE900;
-    --backgroundColor: #F1F1F1;
-    --mainColor: #21A0A0;
-    --callOutColor: #6820e4;
+    --highlightColor: #4C2C69;
+    --backgroundColor: #F0F4EF;
+    --mainColor: #BFCC94;
+    --callOutColor: #4C2C69;
     --white: #FFFFFF;
-    --text: #707070;
-    --darkText: #161616;
+    --text: #373D20;
+    --darkText: #373D20;
 }
 
 body {
@@ -18,17 +18,26 @@ body {
 }
 
 header {
-    max-width: 100vw;
-    margin-top: 0;
-    text-align: center;
-    background-color: var(--callOutColor);
-    box-shadow: 2px 2px 4px rgba(20, 20, 20, 0.2);
-    color: var(--white);
+    font-family: 'Poppins', sans-serif;
+    font-size: 3em;
+    color: var(--darkText);
+    text-align: right;
+    padding-top: 2em;
 }
 
 h1 {
     margin: 0;
-    padding: 1em;
+    padding-top: 1em;
+    font-family: 'Libre Baskerville', serif;
+}
+
+h2 {
+    font-family: 'Libre Baskerville', serif;
+}
+
+#cta-text {
+    font-family: 'Poppins', sans-serif;
+    padding-top: 1em;
 }
 
 #datePicker {
@@ -38,46 +47,48 @@ h1 {
     border-radius: 10px;
     padding: .25em;
     cursor: pointer;
+    margin-bottom: .5em;
 }
 
 .card {
-    background-color: var(--white);
-    box-shadow: 2px 2px 4px rgba(20, 20, 20, 0.2);
-    border-radius: 10px;
     padding: 2em;
     padding-top: 1em;
     text-align: center;
-    min-height: 275px;
 }
 
 #datebtn {
-    font-size: 1em;
+    font-size: 1.5em;
     color: var(--white);
     background-color: var(--callOutColor);
-    padding: 1em 2em 1em 2em;
-    margin: 2em;
+    padding: .5em 1.5em .5em 1.5em;
+    margin: 0em 0em 0em .5em;
     border-radius: .5em;
     border: none;
-    box-shadow: 0px 8px rgba(20, 20, 20, 0.4);
+    box-shadow: 0px 4px rgba(20, 20, 20, 0.4);
     cursor: pointer;
 }
 
 #datebtn:hover {
-    background-color: #8642fc;
+    background-color: #563279;
 }
 
 #datebtn:active {
-    background-color: #5416c0;
-    box-shadow: 0 4px rgba(20, 20, 20, 0.4);
+    background-color: #563279;
+    box-shadow: 0 0px rgba(20, 20, 20, 0.4);
     transform: translateY(4px);
 }
 
 .app-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: 1fr 2fr;
     grid-column-gap: 1em;
     grid-row-gap: 2em;
     padding: 1em;
+}
+
+.pick-a-date {
+    padding-right: 4em;
+    text-align: right;
 }
 
 .gregorian-calendar {
@@ -85,17 +96,42 @@ h1 {
     grid-template-columns: repeat(7, 1fr);
 }
 
+.fixed {
+    border: 1px solid var(--text);
+    border-radius: 16px;
+    box-shadow: 2px 2px 4px rgba(20, 20, 20, 0.2);
+    margin-right: 8em;
+    background-color: var(--white);
+}
+
+#fixed-current-month {
+    font-size: 2em;
+}
 
 .fixed-calendar {
     display: grid;
     grid-template-columns: repeat(7, 1fr);
+    background-color: var(--white);
+    border: 1px solid var(--text);
+}
+
+.cal-item {
+    padding: 1px;
+    border: 1px solid var(--text);
+    min-height: 100px;
+    min-width: 100px;
+    font-size: 2em;
+    line-height: 3em;
 }
 
 .day-highlighter {
     background-color: var(--highlightColor);
+    color: var(--white);
+    /* text-decoration: underline; */
 }
 
 .exposition-container {
+    margin-top: 10em;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(1fr, 1fr));
     grid-column-gap: 1em;
@@ -129,13 +165,18 @@ li {
 }
 
 #fixed-29 {
-    color: var(--darkText);
+    color: var(--white);
     font-weight: bold;
+    text-decoration: none;
+    font-size: 2em;
 }
-
-@media only screen and (max-device-width: 768px) {
+@media only screen and (max-width: 1320px) {
     .app-container {
         grid-template-columns: 1fr;
+    }
+
+    header {
+        padding-top: 0;
     }
 
     .exposition-container {
@@ -143,15 +184,89 @@ li {
     }
 
     body {
-        font-size: 2em;
+        font-size: 1em;
+    }
+
+    .fixed {
+        margin-right: 0;
     }
 
     h1, h2 {
         padding: 0;
+        text-align: center;
     }
 
     .pick-a-date {
-        padding: 0;
+        padding: 0 2em 0 0;
         margin: 0;
+        text-align: center;
+    }
+
+    .exposition-container {
+        margin-top: 0;
+        font-size: 1.2em;
+        padding: .2em;
+    }
+
+    .exposition {
+        max-width: 1000px;
+    }
+
+    .cal-item {
+        min-height: 0;
+        min-width: 0;
+    }
+}
+
+@media only screen and (max-width: 770px) {
+    .app-container {
+        grid-template-columns: 1fr;
+    }
+
+    header {
+        padding-top: 0;
+    }
+
+    .exposition-container {
+        grid-template-columns: 1fr;
+    }
+
+    body {
+        font-size: 1em;
+    }
+
+    .fixed {
+        margin-right: 0;
+    }
+
+    h1, h2 {
+        padding: 0;
+        text-align: center;
+    }
+
+    .pick-a-date {
+        padding: 0 2em 0 0;
+        margin: 0;
+        text-align: center;
+    }
+
+    .exposition-container {
+        margin-top: 0;
+        font-size: 1.2em;
+        padding: .2em;
+    }
+
+    .exposition {
+        max-width: 1000px;
+    }
+
+    .fixed-calendar {
+        border: none;
+    }
+
+    .cal-item {
+        border: none;
+        min-height: 0;
+        min-width: 0;
     }
 }
