--- a/css/styles.css
+++ b/css/styles.css
@@ -84,6 +84,8 @@ h2 {
     grid-column-gap: 1em;
     grid-row-gap: 2em;
     padding: 1em;
+    max-width: 1200px;
+    margin: auto;
 }
 
 .pick-a-date {
